Removed selection styling to fix 'invisible' selection

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -244,7 +244,7 @@ a {
     }
 }
 
-@-webkit-keyframes pulse {    
+@-webkit-keyframes pulse {
     0 {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -261,7 +261,7 @@ a {
     }
 }
 
-@-moz-keyframes pulse {    
+@-moz-keyframes pulse {
     0 {
         -moz-transform: scale(1);
         transform: scale(1);
@@ -360,18 +360,6 @@ footer {
     p {
         margin: 0;
     }
-}
-
-::-moz-selection {
-    text-shadow: none;
-    background: #fcfcfc;
-    background: fade(white, 20%);
-}
-
-::selection {
-    text-shadow: none;
-    background: #fcfcfc;
-    background: fade(white, 20%);
 }
 
 img::selection {
